src/test/ui/parser/issue-20711-2.stderr
error: expected item after attributes
  --> $DIR/issue-20711-2.rs:6:5
   |
LL |     #[stable(feature = "rust1", since = "1.0.0")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

